Make sure letter spacing and font weight is only set once per utility class (rely on inherited values)

--- a/src/marketing/support/variables.scss
+++ b/src/marketing/support/variables.scss
@@ -5,6 +5,10 @@ $font-mktg: $body-font !default;
 $mktg-font-feature-settings: 'ss02' on, 'ss01' on !default;
 $mktg-header-spacing-large: -0.03em !default;
 $mktg-header-spacing-default: -0.01em !default;
+$mktg-header-spacing-threshold: 48px !default;
+$mktg-header-weight-large: 800 !default;
+$mktg-header-weight-default: 600 !default;
+$mktg-header-weight-threshold: 24px !default;
 
 // Header size steps
 $mktg-h-size-0:  96px !default;
