--- a/src/marketing/type/typography.scss
+++ b/src/marketing/type/typography.scss
@@ -15,27 +15,36 @@
 @each $header, $sizes in $mktg-headers {
   .h#{$header}-mktg {
     $pairing: map-get($mktg-header-pairings, nth($sizes, 1));
+    $pairing-md: map-get($mktg-header-pairings, nth($sizes, 2));
+    $pairing-lg: map-get($mktg-header-pairings, nth($sizes, 3));
+
     font-size: map-get($pairing, "size") !important;
     line-height: map-get($pairing, "lh") !important;
-    @if (map-get($pairing, "size") >= 24px) { font-weight: 800 !important; }
+    @if (map-get($pairing, "size") >= $mktg-header-weight-threshold) { font-weight: $mktg-header-weight-large !important; }
 
     @if (nth($sizes, 1) != nth($sizes, 2)) {
       @include breakpoint(md) {
-        $pairing: map-get($mktg-header-pairings, nth($sizes, 2));
-        font-size: map-get($pairing, "size") !important;
-        line-height: map-get($pairing, "lh") !important;
-        @if (map-get($pairing, "size") >= 48px) { letter-spacing: $mktg-header-spacing-large; }
-        @if (map-get($pairing, "size") >= 24px) { font-weight: 800 !important; }
+        font-size: map-get($pairing-md, "size") !important;
+        line-height: map-get($pairing-md, "lh") !important;
+        @if (map-get($pairing-md, "size") >= $mktg-header-spacing-threshold and map-get($pairing, "size") < $mktg-header-spacing-threshold) {
+          letter-spacing: $mktg-header-spacing-large;
+        }
+        @if (map-get($pairing-md, "size") >= $mktg-header-weight-threshold and map-get($pairing, "size") < $mktg-header-weight-threshold) {
+          font-weight: $mktg-header-weight-large !important;
+        }
       }
     }
 
     @if (nth($sizes, 2) != nth($sizes, 3)) {
       @include breakpoint(lg) {
-        $pairing: map-get($mktg-header-pairings, nth($sizes, 3));
-        font-size: map-get($pairing, "size") !important;
-        line-height: map-get($pairing, "lh") !important;
-        @if (map-get($pairing, "size") >= 48px) { letter-spacing: $mktg-header-spacing-large; }
-        @if (map-get($pairing, "size") >= 24px) { font-weight: 800 !important; }
+        font-size: map-get($pairing-lg, "size") !important;
+        line-height: map-get($pairing-lg, "lh") !important;
+        @if (map-get($pairing-lg, "size") >= $mktg-header-spacing-threshold and map-get($pairing-md, "size") < $mktg-header-spacing-threshold) {
+          letter-spacing: $mktg-header-spacing-large;
+        }
+        @if (map-get($pairing-lg, "size") >= $mktg-header-weight-threshold and map-get($pairing-md, "size") < $mktg-header-weight-threshold) {
+          font-weight: $mktg-header-weight-large !important;
+        }
       }
     }
   }
